<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item android:title="Preferences" android:id="@+id/preferences" android:onClick="onOptionsItemSelected"></item>

    <item android:id="@+id/home"
        android:icon="@drawable/quiz_icon"
        android:title="icon"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="always"/>

    <item
        android:id="@+id/quiz"
        android:onClick="onOptionsItemSelected"

        android:title="Quiz"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/add"
        android:onClick="onOptionsItemSelected"
        android:title="Add"
        app:showAsAction="always"/>

    <item android:id="@+id/database"
        android:onClick="onOptionsItemSelected"
        android:title="Database"
        app:showAsAction="always"/>


</menu>